@@ -94,6 +94,7 @@ The supported properties are `in`, `out`, `inout`, `abstract`, `variation`, `rea
 - https://github.com/eclipse-syson/syson/issues/646[#646] [general-view] Handle the representation of actors on the General View diagram.
 - https://github.com/eclipse-syson/syson/issues/648[#648] [general-view] Add support for edges between actors and their containing UseCase/Requirement.
 The source of the edge (the UseCase or Requirement) can be reconnected to another UseCase or Requirement, but the target (Actor) cannot be reconnected.
+- https://github.com/eclipse-syson/syson/issues/656[#656] [services] Improve the drag and drop of containers elements to move their content
 
 === New features
 
